# rsp-pen-plotter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  bootstrap.sh  install-service.sh  install.sh  start.sh  update.sh
backend/: openapi.json  pyproject.toml
backend/pen_plotter/: __init__.py  audit.py  auth.py  deployment.py  errors.py  gcode_library.py  macros.py  main.py  manifests_seed.py  models.py  persistence.py  presets.py  profiles.py  queue.py  rate_limit.py  timelapse.py
backend/pen_plotter/api/: __init__.py  algorithms.py  analyze.py  audit.py  available_colors.py  files.py  fonts.py  gcode_files.py  generate.py  jobs.py  macros.py  manifests.py  optimize.py  plans.py  plotter.py  policy.py  preflight.py  presets.py  preview.py  preview_stream.py  preview_text.py  profiles.py  queue.py  rerender.py  settings.py  slo.py  system.py  timelapse.py  tip_calibration.py  upload.py  upload_limits.py
backend/pen_plotter/application/: __init__.py  color_assignment.py  file_library.py  generate_service.py  ir_cache.py  palette_pool.py  plan_resolver.py  preflight_service.py  preview_raster.py  text_render.py
backend/pen_plotter/converters/: __init__.py  _bayer.py  base.py  bitmap.py  defaults.py  document.py  dxf.py  eps.py  html.py  markdown.py  pdf.py  pdf_blocks.py  pipeline.py  registry.py  segmentation.py  svg.py  text.py
backend/pen_plotter/converters/algorithms/: __init__.py  _hatch.py  _style.py  ascii_shade.py  attractor.py  base.py  brick.py  centerline.py  chladni.py  circle_pack.py  concentric_offset.py  contours.py  crosshatch.py  cubic_disarray.py  curve_stitching.py  dashes.py  direct.py  dither.py  edges.py  etch.py  eulerian_hatch.py  flowfield.py  gosper.py  grid.py  halftone.py  harmonograph.py  hilbert.py  hitomezashi.py  honeycomb.py  lichtenberg.py  lowpoly.py  lsystem.py  maze.py  moire.py  noise_contours.py  penrose.py  phyllotaxis.py  quadtree.py  reaction_diffusion.py  ridge_lines.py  (+20 more)
backend/pen_plotter/converters/bitmap/: __init__.py  cache.py  preprocess.py  render.py  segment.py
backend/pen_plotter/core/: __init__.py  arcs.py  dxf_postprocess.py  ebb.py  gcode.py  layers.py  pathsort.py  pause_logic.py  pdf_postprocess.py  preflight.py  resume.py  sanitize.py  svg_ns.py  svg_text_extract.py  toolchange.py  toolpath.py  tsp.py
backend/pen_plotter/domain/: __init__.py  capability.py  print_plan.py  validators.py
backend/pen_plotter/domain/ir/: __init__.py  adapter.py  artifacts.py  geometry.py  pathplan.py
backend/pen_plotter/domain/policy/: __init__.py  constraints.py  resolver.py  rules.py  types.py
backend/pen_plotter/domain/recovery/: __init__.py  policy.py
backend/pen_plotter/domain/slo/: __init__.py  budgets.py  runtime.py
backend/pen_plotter/domain/toolchange/: __init__.py  orchestrator.py  strategies.py
backend/pen_plotter/hardware/: __init__.py  commands.py  controller.py  gpio.py  streamer.py  transport.py
backend/pen_plotter/manifests/: __init__.py  algorithms.py  base.py  registry.py
backend/pen_plotter/observability/: __init__.py  context.py  logging_config.py  middleware.py  tracing.py
backend/pen_plotter/profiles/: __init__.py  axidraw_v3.yaml  corexy_rack_demo.yaml  custom_plotter.yaml  idraw_a3.yaml  nextdraw.yaml
backend/pen_plotter/sdk/: __init__.py
backend/pen_plotter/templates/: arc.j2  footer.j2  header.j2  line.j2  pen_color_change.j2  pen_down.j2  pen_load.j2  pen_up.j2  tool_change.j2  travel.j2
backend/pen_plotter/typography/: __init__.py  hershey.py
backend/pen_plotter/vision/: __init__.py  aruco_detect.py  tip_detect.py
backend/profiles/: axidraw_v3.yaml
backend/scripts/: check_contracts.py  generate_openapi.py  perf_baseline.py  perf_gate.py  perf_ir_compare.py  profile.sh  regen_algorithms_snapshot.py  toolpath_travel_bench.py
backend/tests/: conftest.py  test_algorithm_policy_resolver.py  test_algorithms_endpoint.py  test_algorithms_manifest.py  test_algorithms_options_snapshot.py  test_api.py  test_arcs.py  test_audit.py  test_auth.py  test_available_colors.py  test_bitmap.py  test_bundled_profiles.py  test_capability_model.py  test_check_contracts.py  test_color_assignment.py  test_converter_postprocess.py  test_csrf_origin.py  test_deployment.py  test_document.py  test_dxf_text_hershey.py  test_e2e_journeys.py  test_ebb.py  test_error_envelope.py  test_expert_styles.py  test_fake_hardware.py  test_files_endpoint.py  test_gcode.py  test_gcode_files.py  test_gcode_golden.py  test_hardware.py  test_health.py  test_hershey.py  test_hershey_overflow.py  test_host_swap.py  test_ir.py  test_layers.py  test_macros.py  test_manifests.py  test_migration.py  test_mm_options.py  (+54 more)
backend/tests/golden/expected/: simple_square.gcode  triangle_actual_scale.gcode  two_layers.gcode
deploy/: omniplot.service.in
docs/: README.md  ROADMAP_V0.2.md  TODO.md  adding_a_converter.md  api_reference.md  architecture.md  audit_couleurs_2026-07-15.md  audit_editor_doublons_textes.md  audit_editor_panel.md  audit_editor_refactor_followup.md  audit_editor_ui.md  audit_exhaustif_2026-07-19.md  audit_gcode_pipeline.md  audit_offset_camera_2026-07.md  audit_optimisation_trace_2026-07-19.md  audit_prep_p3_2026-07-19.md  audit_projet_2026-07-15.md  audit_report.md  audit_system_2026-06-17.md  audit_ui_reactivite.md  camera_tip_offset.md  contract_architecture.md  converters.md  deployment.md  frontend.md  getting_started.md  hardware_streaming.md  observability.md  perf-baseline.md  perf-report.md  perf_pi_procedure.md  plugin-sdk.md  presets.md  profile_format.md  profiling.md  repo_settings.md  shortcuts.md  tool_change_mechanisms.md  ui_lot1_2026-07-19.md  v2_implementation_2026-07-19.md
frontend/: .env.development  .eslintignore  .eslintrc.cjs  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
wiki/: Adding-a-Raster-Algorithm.md  Architecture-Deep-Dive.md  Camera-and-Timelapse.md  Environment-Variables.md  FAQ.md  File-Type-Bitmaps.md  File-Type-Documents.md  File-Type-Gcode.md  Home.md  (+24 more)
(+415 files in other folders)
