[project]
name = "pen-plotter"
version = "0.1.0"
description = "OmniPlot backend — universal pen plotter studio orchestrator"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "numpy>=2.0",
    "scikit-image>=0.22",
    "scikit-learn>=1.5",
    "pymupdf>=1.24",
    "ezdxf>=1.3",
    "hershey-fonts>=2.1",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
    "weasyprint>=62",
    "svgelements>=1.9.6",
    "vpype>=1.15.0",
    "jinja2>=3.1.6",
    "pyserial-asyncio>=0.6",
    "sqlmodel>=0.0.38",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pen_plotter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]
# Algorithm classes all inherit from RasterAlgorithm and override `render_layer`
# with a uniform signature; the class-level docstring is the canonical doc.
"pen_plotter/converters/algorithms/*.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["pen_plotter"]

[[tool.mypy.overrides]]
module = [
    "pillow_heif",
    "sklearn.*",
    "pymupdf",
    "ezdxf",
    "ezdxf.*",
    "HersheyFonts",
    "weasyprint",
    "svgelements",
    "vpype",
    "vpype_cli",
    "serial_asyncio",
    "scipy",
    "scipy.*",
    "skimage",
    "skimage.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# scikit-image / scipy functions are untyped in their wheels; allow
# new raster algorithms to call them without each call site needing a
# per-line type: ignore comment.
module = [
    "pen_plotter.converters.algorithms.concentric_offset",
    "pen_plotter.converters.algorithms.flowfield",
    "pen_plotter.core.tsp",
]
disallow_untyped_calls = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
# Pre-existing baseline debt — modules where numpy / SQLModel / private-attr
# imports trigger errors that pre-date the strict typing rollout. CI still
# enforces strict typing everywhere else; tracked as part of the L0 lot.
module = [
    "pen_plotter.core.toolpath",
    "pen_plotter.converters.algorithms.centerline",
    "pen_plotter.converters.algorithms.squiggle",
    "pen_plotter.converters.algorithms.voronoi_stipple",
    "pen_plotter.converters.segmentation",
    "pen_plotter.persistence",
    "pen_plotter.queue",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "golden: deterministic G-code reference tests; run with --update-goldens to refresh",
]

[tool.coverage.run]
source = ["pen_plotter"]
branch = true
omit = [
    "pen_plotter/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "python-docx>=1.1",
]
